# pcb_fault_detection_ui

./: .gitignore  README.md  build.yaml  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/bounding_box_annotation/: bounding_box_annotation.dart
lib/src/data/: component_classes.dart  image_data.dart  image_data.freezed.dart  image_data.g.dart  image_status_tile_data.dart  image_status_tile_data.freezed.dart  project_data.dart  project_data.freezed.dart  project_data.g.dart
lib/src/models/: auto_slicing.dart  auto_slicing.freezed.dart  auto_slicing.g.dart  pcb_components_model.dart  track_defects_model.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/store/: image_data.store.dart  (+3 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: error.rs  main.rs  mod.rs  model.rs  slicing.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_pcb_fault_detection_ui.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_pcb_fault_detection_ui.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+29 files in other folders)
