[package]
name = "rust_lib_pcb_fault_detection_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
arcstr = "1.2.0"
flutter_rust_bridge = "=2.10.0"
image = "0.25.6"
ndarray = { version = "0.16.1", features = ["rayon"]}
ort = {version = "=2.0.0-rc.10", features=["copy-dylibs", "download-binaries", "half", "ndarray", "half", "directml"]}
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
thiserror = "2.0.12"
derivative = "2.2.0"
tracing = "0.1.41"
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
itertools = "0.14.0"
bit-set = "0.8.0"

[profile.dev]
rpath = true
 
[profile.release]
rpath = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
